--- a/devtemplate/templates/IMSReport_templateDV.html
+++ b/devtemplate/templates/IMSReport_templateDV.html
@@ -70,8 +70,7 @@
 							<input maxlength="200" placeholder="Place Link here" type="text" class="form-control collapse" name="website" id="website" value="<%%VALUE(website)%%>">
 							<a id="website-link" href="link.php?t=IMSReport&f=website&i=<%%VALUE(Postid)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(website)%%>" style="font-size: x-large; top: .35em;"></i></a>
 							<script>jQuery(function(){ /* */ var e_website = '<%%VALUE(website)%%>'; if(e_website == '' || e_website == '&nbsp;' || e_website == 'blank.gif') jQuery('#website-link').hide(); });</script>
-							<button type="button" class="btn btn-sm btn-outline-danger m-b-5"
-							id="website_remove">Remove</button>
+							
 						</span>
 					</div>
 				</div>
@@ -81,7 +80,7 @@
 				<div class="form-group row">
 					<label class="control-label col-lg-2">Documents<div class="text-muted">Attached <span id="totalDocumentAttached"></span>/3</div></label>
 					<div class="col-lg-10">
-						<span class="attach-group"></span>
+						<span class="attach-group">
 							<a id="Ref01-link" href="link.php?t=IMSReport&f=Ref01&i=<%%VALUE(Postid)%%>" target="_blank" aria-labelledby="attachment-readMode"><%%VALUE(Ref01)%%></a>
 							<script>jQuery(function(){ /* */ var e_Ref01 = '<%%VALUE(Ref01)%%>'; if(e_Ref01 == '' || e_Ref01 == '&nbsp;' || e_Ref01 == 'blank.gif') jQuery('#Ref01-link').hide(); });</script>
 							
