--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -5680,6 +5680,9 @@ transform: rotate(-135deg) translate(0, -50%); }
 #page-wrapper {
   padding-top: 80px !important;
 }
+.page-wrapper {
+  padding-top: 80px !important;
+}
 .mini-sidebar.show-sidebar .left-sidebar,
 .mini-sidebar.show-sidebar .sidebar-footer {
   display: block; }
