--- a/devtemplate/templates/ManagingVendor_templateDV.html
+++ b/devtemplate/templates/ManagingVendor_templateDV.html
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 
-				<div class="form-group row">
+				<!-- <div class="form-group row">
 					<hr class="hidden-md hidden-lg">
 					<label class="control-label col-lg-2">Image <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_image-description"></i></label>
 					<div class="col-lg-10">
@@ -112,7 +112,7 @@
 					</div>
 
 					</div>
-				</div>
+				</div> -->
 
 				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
