remove disabled tabs label on mobile view

--- a/devtemplate/templates/employees_templateDV.html
+++ b/devtemplate/templates/employees_templateDV.html
@@ -57,9 +57,9 @@
 	</div>
 
 	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
-		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Description</span></a> </li>
-		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Attachment" role="tab" class="not-active"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Attachment</span></a> </li>
-		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Review" role="tab" class="not-active"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Review</span></a> </li>
+		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> Description</a> </li>
+		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Attachment" role="tab" class="not-active"><span class="hidden-sm-up"></span> Attachment</a> </li>
+		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Review" role="tab" class="not-active"><span class="hidden-sm-up"></span> Review</a> </li>
 
 	</ul>
 
