--- a/devtemplate/templates/summary_dashboard_templateDV.html
+++ b/devtemplate/templates/summary_dashboard_templateDV.html
@@ -42,7 +42,7 @@
 	</div>
 
 	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
-		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Description</span></a> </li>
+		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> Description</a> </li>
 
 	</ul>
 
