--- a/devtemplate/templates/ProjectTeam_templateDV.html
+++ b/devtemplate/templates/ProjectTeam_templateDV.html
@@ -51,7 +51,7 @@
 
 	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
 		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> Description</a> </li>
-		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Attachment" role="tab" class="not-active"><span class="hidden-sm-up"></span> Attachment</a> </li>
+		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Attachment" role="tab" class="not-active"><span class="hidden-sm-up"></span> Details</a> </li>
 		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Review" role="tab" class="not-active"><span class="hidden-sm-up"></span> Review</a> </li>
 
 	</ul>
