summary_counters.php correction on 13 tables

--- a/devtemplate/templates/Inventory_templateDV.html
+++ b/devtemplate/templates/Inventory_templateDV.html
@@ -51,7 +51,7 @@
 	</div>
 
 	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
-		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#TabDescription" role="tab" class="not-active"><span class="hidden-sm-up"></span> TabDescription</a> </li>
+		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#TabDescription" role="tab" class="not-active"><span class="hidden-sm-up"></span> Description</a> </li>
 		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Attachment" role="tab" class="not-active"><span class="hidden-sm-up"></span> Details</a> </li>
 		<li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#Review" role="tab" class="not-active"><span class="hidden-sm-up"></span> Review</a> </li>
 
@@ -154,7 +154,7 @@
 					</div>
 				</div>
 
-				<div class="form-group row">
+				<!-- <div class="form-group row">
 					<hr class="hidden-md hidden-lg">
 					<label class="control-label col-lg-2">Image <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_image-description"></i></label>
 					<div class="col-lg-10">
@@ -174,7 +174,7 @@
 					</div>
 
 					</div>
-				</div>
+				</div> -->
 
 				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
