--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7562,3 +7562,8 @@ th     { background:#fff; }
 .form-control{
   border-radius: .25rem !important;
 }
+.thumbnail, .img-thumbnail{
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: none;
+}
