removed lines in all other DVP templates similar to fix in projects_templateDVP.html, added footer to reports.php

--- a/devtemplate/templates/ProjectTeam_templateDVP.html
+++ b/devtemplate/templates/ProjectTeam_templateDVP.html
@@ -14,37 +14,37 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Employee ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ProjectTeamID)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Project Team Number</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(EmpNo)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Full Name</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(Name)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Work Location</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="BaseLocation<%%RND1%%>"><%%COMBOTEXT(BaseLocation)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Employment Term</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_TermEmployment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -52,7 +52,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -60,7 +60,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -68,199 +68,199 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Position</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Position)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">On Hire Date</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_HireDate)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Off Hire Date</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_OffHireDate)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Address</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Address)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">City</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_City)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Region</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Region)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Postal Code</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_PostalCode)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Country</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_Country)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Home Phone</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_HomePhone)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Extension</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Extension)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Notes</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Notes)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">ReportsTo</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="fo_ReportsTo<%%RND1%%>"><%%COMBOTEXT(fo_ReportsTo)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">IMS Acknowledgement</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><input type="checkbox" name="fo_Acknowledgement" id="fo_Acknowledgement" value="1" <%%CHECKED(fo_Acknowledgement)%%> readonly></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Awareness & Induction</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><input type="checkbox" name="fo_Induction" id="fo_Induction" value="1" <%%CHECKED(fo_Induction)%%> readonly></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">File Location & Number</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_FileLoc)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Other details</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_otherdetails)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Comments</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_comments)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link 1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_SharedLink1-link" href="link.php?t=ProjectTeam&f=ot_SharedLink1&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(ot_SharedLink1)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_ot_SharedLink1 = '<%%VALUE(ot_SharedLink1)%%>'; if(e_ot_SharedLink1 == '' || e_ot_SharedLink1 == '&nbsp;' || e_ot_SharedLink1 == 'blank.gif') jQuery('#ot_SharedLink1-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link 2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_SharedLink2-link" href="link.php?t=ProjectTeam&f=ot_SharedLink2&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(ot_SharedLink2)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_ot_SharedLink2 = '<%%VALUE(ot_SharedLink2)%%>'; if(e_ot_SharedLink2 == '' || e_ot_SharedLink2 == '&nbsp;' || e_ot_SharedLink2 == 'blank.gif') jQuery('#ot_SharedLink2-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref01-link" href="link.php?t=ProjectTeam&f=ot_Ref01&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><%%VALUE(ot_Ref01)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref01 = '<%%VALUE(ot_Ref01)%%>'; if(e_ot_Ref01 == '' || e_ot_Ref01 == '&nbsp;' || e_ot_Ref01 == 'blank.gif') jQuery('#ot_Ref01-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref02-link" href="link.php?t=ProjectTeam&f=ot_Ref02&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><%%VALUE(ot_Ref02)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref02 = '<%%VALUE(ot_Ref02)%%>'; if(e_ot_Ref02 == '' || e_ot_Ref02 == '&nbsp;' || e_ot_Ref02 == 'blank.gif') jQuery('#ot_Ref02-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref03-link" href="link.php?t=ProjectTeam&f=ot_Ref03&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><%%VALUE(ot_Ref03)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref03 = '<%%VALUE(ot_Ref03)%%>'; if(e_ot_Ref03 == '' || e_ot_Ref03 == '&nbsp;' || e_ot_Ref03 == 'blank.gif') jQuery('#ot_Ref03-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_4</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref04-link" href="link.php?t=ProjectTeam&f=ot_Ref04&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><%%VALUE(ot_Ref04)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref04 = '<%%VALUE(ot_Ref04)%%>'; if(e_ot_Ref04 == '' || e_ot_Ref04 == '&nbsp;' || e_ot_Ref04 == 'blank.gif') jQuery('#ot_Ref04-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_5</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref05-link" href="link.php?t=ProjectTeam&f=ot_Ref05&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><%%VALUE(ot_Ref05)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref05 = '<%%VALUE(ot_Ref05)%%>'; if(e_ot_Ref05 == '' || e_ot_Ref05 == '&nbsp;' || e_ot_Ref05 == 'blank.gif') jQuery('#ot_Ref05-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_6</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref06-link" href="link.php?t=ProjectTeam&f=ot_Ref06&i=<%%VALUE(ProjectTeamID)%%>" target="_blank"><%%VALUE(ot_Ref06)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref06 = '<%%VALUE(ot_Ref06)%%>'; if(e_ot_Ref06 == '' || e_ot_Ref06 == '&nbsp;' || e_ot_Ref06 == 'blank.gif') jQuery('#ot_Ref06-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Review</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_Review<%%RND1%%>"><%%COMBOTEXT(ot_ap_Review)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Review Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_RevComment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Approval</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_Approval<%%RND1%%>"><%%COMBOTEXT(ot_ap_Approval)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Approval Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_ApprComment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">IMS Control</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_QC<%%RND1%%>"><%%COMBOTEXT(ot_ap_QC)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">IMS Control Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_QCComment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Register</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_filed)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_lastmodified)%%></div>
