--- a/devtemplate/templates/IMSControl_templateDVP.html
+++ b/devtemplate/templates/IMSControl_templateDVP.html
@@ -14,37 +14,37 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(id)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Inspection Status</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(Status)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Description</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(Description)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Other details</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(other_details)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Filed</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(filed)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(last_modified)%%></div>
