--- a/devtemplate/templates/IMSReport_templateDVP.html
+++ b/devtemplate/templates/IMSReport_templateDVP.html
@@ -14,19 +14,19 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(Postid)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Report Title</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(Title)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Image</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -34,67 +34,67 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Detail Report</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(TextPost)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="website-link" href="link.php?t=IMSReport&f=website&i=<%%VALUE(Postid)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(website)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_website = '<%%VALUE(website)%%>'; if(e_website == '' || e_website == '&nbsp;' || e_website == 'blank.gif') jQuery('#website-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference Item 1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="Ref01-link" href="link.php?t=IMSReport&f=Ref01&i=<%%VALUE(Postid)%%>" target="_blank"><%%VALUE(Ref01)%%></a><script>jQuery(function(){ /* */ var e_Ref01 = '<%%VALUE(Ref01)%%>'; if(e_Ref01 == '' || e_Ref01 == '&nbsp;' || e_Ref01 == 'blank.gif') jQuery('#Ref01-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference Item 2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="Ref02-link" href="link.php?t=IMSReport&f=Ref02&i=<%%VALUE(Postid)%%>" target="_blank"><%%VALUE(Ref02)%%></a><script>jQuery(function(){ /* */ var e_Ref02 = '<%%VALUE(Ref02)%%>'; if(e_Ref02 == '' || e_Ref02 == '&nbsp;' || e_Ref02 == 'blank.gif') jQuery('#Ref02-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference Item 3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="Ref03-link" href="link.php?t=IMSReport&f=Ref03&i=<%%VALUE(Postid)%%>" target="_blank"><%%VALUE(Ref03)%%></a><script>jQuery(function(){ /* */ var e_Ref03 = '<%%VALUE(Ref03)%%>'; if(e_Ref03 == '' || e_Ref03 == '&nbsp;' || e_Ref03 == 'blank.gif') jQuery('#Ref03-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference Item 4</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="Ref04-link" href="link.php?t=IMSReport&f=Ref04&i=<%%VALUE(Postid)%%>" target="_blank"><%%VALUE(Ref04)%%></a><script>jQuery(function(){ /* */ var e_Ref04 = '<%%VALUE(Ref04)%%>'; if(e_Ref04 == '' || e_Ref04 == '&nbsp;' || e_Ref04 == 'blank.gif') jQuery('#Ref04-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference Item 5</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="Ref05-link" href="link.php?t=IMSReport&f=Ref05&i=<%%VALUE(Postid)%%>" target="_blank"><%%VALUE(Ref05)%%></a><script>jQuery(function(){ /* */ var e_Ref05 = '<%%VALUE(Ref05)%%>'; if(e_Ref05 == '' || e_Ref05 == '&nbsp;' || e_Ref05 == 'blank.gif') jQuery('#Ref05-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference Item 6</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="Ref06-link" href="link.php?t=IMSReport&f=Ref06&i=<%%VALUE(Postid)%%>" target="_blank"><%%VALUE(Ref06)%%></a><script>jQuery(function(){ /* */ var e_Ref06 = '<%%VALUE(Ref06)%%>'; if(e_Ref06 == '' || e_Ref06 == '&nbsp;' || e_Ref06 == 'blank.gif') jQuery('#Ref06-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Issue Closed</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><input type="checkbox" name="ClosedIssue" id="ClosedIssue" value="1" <%%CHECKED(ClosedIssue)%%> readonly></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Posting Date</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(filed)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(last_modified)%%></div>
