--- a/devtemplate/templates/NonConformance_templateDVP.html
+++ b/devtemplate/templates/NonConformance_templateDVP.html
@@ -14,127 +14,127 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(id)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Record ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(DocconNumber)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Work Location</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="worklocID<%%RND1%%>"><%%COMBOTEXT(worklocID)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Title</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_DocItem)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Description</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_DocumentDescription)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Classification</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_Classification)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Direct Impact</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_Impact)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Register date</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_Regdate)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Issue Closed</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><input type="checkbox" name="fo_ClosedIssue" id="fo_ClosedIssue" value="1" <%%CHECKED(fo_ClosedIssue)%%> readonly></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">File Location & Number</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_FileLoc)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Other details</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_otherdetails)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Comments</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_comments)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link 1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_SharedLink1-link" href="link.php?t=NonConformance&f=ot_SharedLink1&i=<%%VALUE(id)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(ot_SharedLink1)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_ot_SharedLink1 = '<%%VALUE(ot_SharedLink1)%%>'; if(e_ot_SharedLink1 == '' || e_ot_SharedLink1 == '&nbsp;' || e_ot_SharedLink1 == 'blank.gif') jQuery('#ot_SharedLink1-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link 2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_SharedLink2-link" href="link.php?t=NonConformance&f=ot_SharedLink2&i=<%%VALUE(id)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(ot_SharedLink2)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_ot_SharedLink2 = '<%%VALUE(ot_SharedLink2)%%>'; if(e_ot_SharedLink2 == '' || e_ot_SharedLink2 == '&nbsp;' || e_ot_SharedLink2 == 'blank.gif') jQuery('#ot_SharedLink2-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref01-link" href="link.php?t=NonConformance&f=ot_Ref01&i=<%%VALUE(id)%%>" target="_blank"><%%VALUE(ot_Ref01)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref01 = '<%%VALUE(ot_Ref01)%%>'; if(e_ot_Ref01 == '' || e_ot_Ref01 == '&nbsp;' || e_ot_Ref01 == 'blank.gif') jQuery('#ot_Ref01-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref02-link" href="link.php?t=NonConformance&f=ot_Ref02&i=<%%VALUE(id)%%>" target="_blank"><%%VALUE(ot_Ref02)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref02 = '<%%VALUE(ot_Ref02)%%>'; if(e_ot_Ref02 == '' || e_ot_Ref02 == '&nbsp;' || e_ot_Ref02 == 'blank.gif') jQuery('#ot_Ref02-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref03-link" href="link.php?t=NonConformance&f=ot_Ref03&i=<%%VALUE(id)%%>" target="_blank"><%%VALUE(ot_Ref03)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref03 = '<%%VALUE(ot_Ref03)%%>'; if(e_ot_Ref03 == '' || e_ot_Ref03 == '&nbsp;' || e_ot_Ref03 == 'blank.gif') jQuery('#ot_Ref03-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_4</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref04-link" href="link.php?t=NonConformance&f=ot_Ref04&i=<%%VALUE(id)%%>" target="_blank"><%%VALUE(ot_Ref04)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref04 = '<%%VALUE(ot_Ref04)%%>'; if(e_ot_Ref04 == '' || e_ot_Ref04 == '&nbsp;' || e_ot_Ref04 == 'blank.gif') jQuery('#ot_Ref04-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_5</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref05-link" href="link.php?t=NonConformance&f=ot_Ref05&i=<%%VALUE(id)%%>" target="_blank"><%%VALUE(ot_Ref05)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref05 = '<%%VALUE(ot_Ref05)%%>'; if(e_ot_Ref05 == '' || e_ot_Ref05 == '&nbsp;' || e_ot_Ref05 == 'blank.gif') jQuery('#ot_Ref05-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_6</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref06-link" href="link.php?t=NonConformance&f=ot_Ref06&i=<%%VALUE(id)%%>" target="_blank"><%%VALUE(ot_Ref06)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref06 = '<%%VALUE(ot_Ref06)%%>'; if(e_ot_Ref06 == '' || e_ot_Ref06 == '&nbsp;' || e_ot_Ref06 == 'blank.gif') jQuery('#ot_Ref06-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -142,7 +142,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -150,7 +150,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -158,49 +158,49 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Review</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_Review<%%RND1%%>"><%%COMBOTEXT(ot_ap_Review)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Review Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_RevComment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Approval</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_Approval<%%RND1%%>"><%%COMBOTEXT(ot_ap_Approval)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Approval Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_ApprComment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">IMS Control</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="ot_ap_QC<%%RND1%%>"><%%COMBOTEXT(ot_ap_QC)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">IMS Control Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_QCComment)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Register</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_filed)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_lastmodified)%%></div>
