--- a/devtemplate/templates/SoftboardComment_templateDVP.html
+++ b/devtemplate/templates/SoftboardComment_templateDVP.html
@@ -14,31 +14,31 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Comment ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(RunningID)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Commenting on</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><span id="PostID<%%RND1%%>"><%%COMBOTEXT(PostID)%%></span></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Comment</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(TextPost)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Write on</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(filed)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(last_modified)%%></div>
