--- a/devtemplate/templates/kpi_templateDVP.html
+++ b/devtemplate/templates/kpi_templateDVP.html
@@ -14,43 +14,43 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(id)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Date</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(ot_ap_Date)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Section</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Section_Caption)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Minimum Records Required</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_MinRecordRequired)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Task Completion Duration</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_TaskCompDuration)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Percentage of KPI achieved per annum</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_PercentageAchieved)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_lastmodified)%%></div>
