--- a/devtemplate/templates/membership_company_templateDVP.html
+++ b/devtemplate/templates/membership_company_templateDVP.html
@@ -14,25 +14,25 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">CompID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(compID)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Name</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Name)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Registration ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_RegistrationID)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Logo</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -40,7 +40,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Banner</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -48,7 +48,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -56,7 +56,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -64,7 +64,7 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Photo_3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static">
@@ -72,133 +72,133 @@
 </div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Address</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Address)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">City</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_City)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Region</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Region)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Postal Code</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_PostalCode)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Country</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(fo_Country)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Phone_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Phone_1)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Phone_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Phone_2)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Fax</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Fax)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Email</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Email)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Admin Email</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Admin_Email)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Comments</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_Comments)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Other details</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_otherDetails)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link 1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_SharedLink1-link" href="link.php?t=membership_company&f=ot_SharedLink1&i=<%%VALUE(compID)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(ot_SharedLink1)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_ot_SharedLink1 = '<%%VALUE(ot_SharedLink1)%%>'; if(e_ot_SharedLink1 == '' || e_ot_SharedLink1 == '&nbsp;' || e_ot_SharedLink1 == 'blank.gif') jQuery('#ot_SharedLink1-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Shared Link 2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_SharedLink2-link" href="link.php?t=membership_company&f=ot_SharedLink2&i=<%%VALUE(compID)%%>" target="_blank"><i class="glyphicon glyphicon-globe" title="<%%VALUE(ot_SharedLink2)%%>" style="font-size: x-large;"></i></a><script>jQuery(function(){ /* */ var e_ot_SharedLink2 = '<%%VALUE(ot_SharedLink2)%%>'; if(e_ot_SharedLink2 == '' || e_ot_SharedLink2 == '&nbsp;' || e_ot_SharedLink2 == 'blank.gif') jQuery('#ot_SharedLink2-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref01-link" href="link.php?t=membership_company&f=ot_Ref01&i=<%%VALUE(compID)%%>" target="_blank"><%%VALUE(ot_Ref01)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref01 = '<%%VALUE(ot_Ref01)%%>'; if(e_ot_Ref01 == '' || e_ot_Ref01 == '&nbsp;' || e_ot_Ref01 == 'blank.gif') jQuery('#ot_Ref01-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref02-link" href="link.php?t=membership_company&f=ot_Ref02&i=<%%VALUE(compID)%%>" target="_blank"><%%VALUE(ot_Ref02)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref02 = '<%%VALUE(ot_Ref02)%%>'; if(e_ot_Ref02 == '' || e_ot_Ref02 == '&nbsp;' || e_ot_Ref02 == 'blank.gif') jQuery('#ot_Ref02-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_3</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref03-link" href="link.php?t=membership_company&f=ot_Ref03&i=<%%VALUE(compID)%%>" target="_blank"><%%VALUE(ot_Ref03)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref03 = '<%%VALUE(ot_Ref03)%%>'; if(e_ot_Ref03 == '' || e_ot_Ref03 == '&nbsp;' || e_ot_Ref03 == 'blank.gif') jQuery('#ot_Ref03-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_4</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref04-link" href="link.php?t=membership_company&f=ot_Ref04&i=<%%VALUE(compID)%%>" target="_blank"><%%VALUE(ot_Ref04)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref04 = '<%%VALUE(ot_Ref04)%%>'; if(e_ot_Ref04 == '' || e_ot_Ref04 == '&nbsp;' || e_ot_Ref04 == 'blank.gif') jQuery('#ot_Ref04-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_5</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref05-link" href="link.php?t=membership_company&f=ot_Ref05&i=<%%VALUE(compID)%%>" target="_blank"><%%VALUE(ot_Ref05)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref05 = '<%%VALUE(ot_Ref05)%%>'; if(e_ot_Ref05 == '' || e_ot_Ref05 == '&nbsp;' || e_ot_Ref05 == 'blank.gif') jQuery('#ot_Ref05-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Reference_6</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><a id="ot_Ref06-link" href="link.php?t=membership_company&f=ot_Ref06&i=<%%VALUE(compID)%%>" target="_blank"><%%VALUE(ot_Ref06)%%></a><script>jQuery(function(){ /* */ var e_ot_Ref06 = '<%%VALUE(ot_Ref06)%%>'; if(e_ot_Ref06 == '' || e_ot_Ref06 == '&nbsp;' || e_ot_Ref06 == 'blank.gif') jQuery('#ot_Ref06-link').hide(); });</script></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Filed</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_filed)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_lastmodified)%%></div>
