--- a/devtemplate/templates/summary_dashboard_templateDVP.html
+++ b/devtemplate/templates/summary_dashboard_templateDVP.html
@@ -14,79 +14,79 @@
 
 <div class="panel-body">
 	<fieldset class="form-horizontal">
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">ID</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(id)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Date</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%COMBOTEXT(ot_ap_Date)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Section</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_Section_Caption)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Field</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_TotalDisplayField)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Total Count</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_TotalCount)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Review Count</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_ReviewCount)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Approval Count</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_ApprovalCount)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">IMS Control Count</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_IMSControlCount)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Custom Display Field 1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_CustomDisplayField1)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Custom 1</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_CustomDisplayValue1)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Custom Display Field 2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_CustomDisplayField2)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Custom 2</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(fo_CustomDisplayValue2)%%></div>
 			</div>
 		</div>
-		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
+		<div class="form-group" >
 			<label class="col-xs-3 control-label">Last modified</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><%%VALUE(ot_ap_lastmodified)%%></div>
