--- a/devtemplate/templates/Inventory_templateDVP.html
+++ b/devtemplate/templates/Inventory_templateDVP.html
@@ -104,7 +104,7 @@
 				<div class="form-control-static"><%%VALUE(fo_ItemLocation)%%></div>
 			</div>
 		</div>
-		<div class="form-group" >
+		<!-- <div class="form-group" >
 			<label class="col-xs-3 control-label">Image</label>
 			<div class="col-xs-9">
 				<div class="form-control-static"><script>
@@ -113,7 +113,7 @@
 			</script>
 			<a href="#" onclick="$('fo_imageImg<%%RND1%%>').src=($('fo_imageImg<%%RND1%%>').src.search(/thumbnail\.php/) != -1 && fo_imageSrc1<%%RND1%%> != '<%%TRANSLATION(ImageFolder)%%>' ? fo_imageSrc1<%%RND1%%> : fo_imageSrc2<%%RND1%%>); return false;"><img id="fo_imageImg<%%RND1%%>" src="thumbnail.php?t=Inventory&f=fo_image&i=<%%VALUE(fo_image)%%>&v=dv" class="img-thumbnail"></a></div>
 			</div>
-		</div>
+		</div> -->
 		<div class="form-group" >
 			<label class="col-xs-3 control-label">File Location & Number</label>
 			<div class="col-xs-9">
